[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yahsd"
version = "0.1.0"
description = "Yet Another Horrible Subs Downloader"
authors = ["A Rabbit <rabbit-of-caerbannog@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

